Fix carryover problems from Largo's CSS for sticky nav shelves; make header appear on mobile

--- a/wp-content/themes/caribbean/less/navigation.less
+++ b/wp-content/themes/caribbean/less/navigation.less
@@ -1,3 +1,9 @@
+@media ( max-width: 768px ) {
+	// override Largo
+	#site-header, #main-nav {
+		display: block;
+	}
+}
 #main-nav.navbar {
 	position: sticky;
 	top: 0;
@@ -5,10 +11,6 @@
 	background: @white;
 	border-top: 1px solid @grey3;
 	border-bottom: 4px solid @grey1;
-	@media ( max-width: 768px ) {
-		// override Largo
-		display: block;
-	}
 	.admin-bar & {
 		top: 32px;
 		@media ( max-width: 782px ) {
